--- a/assets/css/oliver.css
+++ b/assets/css/oliver.css
@@ -15,7 +15,6 @@ body {
   color: #43464B;
   background: #fff;
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', Myriad, 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', Tahoma, Geneva, sans-serif;
-
 }
 
 /* ---------------------
@@ -62,7 +61,9 @@ h4 {
   font-weight: 700;
 }
 
-
+b {
+  font-weight: 600;
+}
 /* ---------------------
 Lists
 ----------------------*/
@@ -119,9 +120,10 @@ Forms
 ----------------------*/
 
 form {
-  margin: 2em 0;
+  margin: 1em 0 0;
+  background: rgba(218,218,218,.3);
   padding: 1em;
-  background: #eee;
+  border-radius: .3em;
 }
 
 
@@ -152,11 +154,12 @@ legend {
 .label {
   display: block;
   margin: 0 0 0.3em;
+  font-weight: 600;
 }
 
 .input {
   display: block;
-  width: 100%;
+  width: 97%;
   padding: 0.5em;
   border: 1px solid #999;
   font-size: 1em;
@@ -213,20 +216,6 @@ button:active {
 }
 
 /* ---------------------
-footer links
-----------------------*/
-
-.footer-links {
-  margin: 5em 0 1em;
-  font-size: .8em;
-}
-
-.footer-links a {
-  display: inline-block;
-  margin: 0 .3em;
-}
-
-/* ---------------------
 Hidden
 ----------------------*/
 
@@ -258,8 +247,12 @@ nav {
 }
 
 footer {
-  margin: 3em 0 0;
+  margin: 5em 0 0;
 }
+
+/* ---------------------
+items
+----------------------*/
 
 .item {
   overflow: hidden;
